Fixed button alignment when on mobile version

--- a/styles/general.css
+++ b/styles/general.css
@@ -21,6 +21,7 @@ time, mark, audio, video {
 }
 /* general styles */
 html {
+    width: 100vw;
     height: 100vh;
 }
 body {
