--- a/styles/media.css
+++ b/styles/media.css
@@ -11,10 +11,13 @@
         border-radius: 0px 0px 30px 30px;
     }
     .summary {
+        max-width: 100vw;
         margin: auto;
     }
+    .continue-button {
+        padding: 2.5vh 16.5vw;
+    }
 }
-
 @media (max-height: 560px) {
     main {
         width: 100vw;
@@ -24,9 +27,14 @@
         box-shadow: none;
     }
     .your-result {
+        width: 100vw;
         border-radius: 0px 0px 30px 30px;
     }
     .summary {
+        max-width: 100vw;
         margin: auto;
+    }
+    .continue-button {
+        padding: 2.5vh 16.5vw;
     }
 }
